<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item android:id="@+id/add"
            android:title="@string/add_story"
            android:icon = "@drawable/ic_outline_add_box_24"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/maps"
            android:title="@string/map"
            android:icon = "@drawable/ic_baseline_map_24"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/language"
            android:title="@string/language"
            android:icon="@drawable/ic_baseline_language_24"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            app:showAsAction="ifRoom"/>
    </group>
</menu>