<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.add.AddStoryActivity">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_photo_24" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="@+id/preview"
        app:layout_constraintTop_toBottomOf="@+id/preview" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/preview"
        app:layout_constraintTop_toBottomOf="@+id/preview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/in_add_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/galleryButton"
        app:layout_constraintStart_toStartOf="@+id/cameraButton"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:maxLines="5"
            android:gravity="top"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/in_add_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/add_location"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_location_on_24"
        app:layout_constraintEnd_toEndOf="@+id/in_add_description"
        app:layout_constraintStart_toStartOf="@+id/in_add_description"
        app:layout_constraintTop_toBottomOf="@+id/in_add_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/in_add_description"
        app:layout_constraintStart_toStartOf="@+id/in_add_description"
        app:layout_constraintTop_toBottomOf="@+id/in_add_location" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadButton" />

</androidx.constraintlayout.widget.ConstraintLayout>